--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,22 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/src/images/favicon.svg">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/src/images/favicon.svg" />
     <title>Museum</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
-   >
-    <link rel="stylesheet" href="./styles/utils/reset.scss">
+    />
+    <link rel="stylesheet" href="./styles/utils/reset.scss" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-   >
-    <link rel="stylesheet" href="./styles/main.scss">
+    />
+    <link rel="stylesheet" href="./styles/main.scss" />
   </head>
   <body class="page__body">
     <!-- #endregion doctype -->
@@ -54,7 +54,7 @@
                 </li>
                 <li class="navigation__item">
                   <a href="#events" class="navigation__link">
-                    Виставки та <br>
+                    Виставки та <br />
                     події
                   </a>
                 </li>
@@ -101,7 +101,7 @@
               <div class="schedule__additional-info">
                 <strong>Вихідні:</strong>
                 понеділок, вівторок
-                <br>
+                <br />
                 Каса припиняє роботу за 1 годину до закриття музею
               </div>
             </div>
@@ -119,7 +119,10 @@
           <div class="event__cards card">
             <article class="card__block">
               <div class="card__image">
-                <img src="/src/images//events-block/pictupe.png" alt="picture">
+                <img
+                  src="/src/images//events-block/pictupe.png"
+                  alt="picture"
+                />
               </div>
               <div class="card__description">
                 <div class="card__info">
@@ -136,7 +139,10 @@
             </article>
             <article class="card__block">
               <div class="card__image">
-                <img src="/src/images//events-block/pictupe-2.png" alt="picture">
+                <img
+                  src="/src/images//events-block/pictupe-2.png"
+                  alt="picture"
+                />
               </div>
               <div class="card__description">
                 <div class="card__info">
@@ -172,16 +178,25 @@
           <h2 class="gallery__title">Галерея</h2>
           <div class="gallery__block">
             <div class="gallery__photo">
-              <img src="/src/images//gallery-block/picture.png" alt="picture">
+              <img src="/src/images//gallery-block/picture.png" alt="picture" />
             </div>
             <div class="gallery__photo">
-              <img src="/src/images//gallery-block/picture-2.png" alt="picture">
+              <img
+                src="/src/images//gallery-block/picture-2.png"
+                alt="picture"
+              />
             </div>
             <div class="gallery__photo">
-              <img src="/src/images//gallery-block/picture-3.png" alt="picture">
+              <img
+                src="/src/images//gallery-block/picture-3.png"
+                alt="picture"
+              />
             </div>
             <div class="gallery__photo">
-              <img src="/src/images//gallery-block/picture-4.png" alt="picture">
+              <img
+                src="/src/images//gallery-block/picture-4.png"
+                alt="picture"
+              />
             </div>
           </div>
           <div class="swiper">
@@ -189,16 +204,28 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <img src="/src/images/gallery-block/picture.png" alt="picture">
+                <img
+                  src="/src/images/gallery-block/picture.png"
+                  alt="picture"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="/src/images/gallery-block/picture-5.png" alt="picture">
+                <img
+                  src="/src/images/gallery-block/picture-5.png"
+                  alt="picture"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="/src/images/gallery-block/picture-3.png" alt="picture">
+                <img
+                  src="/src/images/gallery-block/picture-3.png"
+                  alt="picture"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="/src/images/gallery-block/picture-4.png" alt="picture">
+                <img
+                  src="/src/images/gallery-block/picture-4.png"
+                  alt="picture"
+                />
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -225,7 +252,7 @@
               type="email"
               placeholder="E-mail"
               required
-           >
+            />
             <button class="subscription__btn"></button>
           </form>
         </div>
@@ -240,7 +267,7 @@
           <div class="footer__info">
             <div class="footer__logo-and-social">
               <a href="#" class="footer__logo">
-                <img src="/src/images//footer-logo.svg" alt="logo">
+                <img src="/src/images//footer-logo.svg" alt="logo" />
               </a>
               <div class="social">
                 <a
@@ -248,14 +275,20 @@
                   href="https://www.facebook.com/"
                   target="_blank"
                 >
-                  <img src="/src/images//icons/facebook-logo.svg" alt="facebook">
+                  <img
+                    src="/src/images//icons/facebook-logo.svg"
+                    alt="facebook"
+                  />
                 </a>
                 <a
                   class="social__facebook"
                   href="https://www.instagram.com"
                   target="_blank"
                 >
-                  <img src="/src/images//icons/instagram-logo.svg" alt="instagram">
+                  <img
+                    src="/src/images//icons/instagram-logo.svg"
+                    alt="instagram"
+                  />
                 </a>
               </div>
             </div>
@@ -289,7 +322,7 @@
                       </ul>
                       <div class="schedule__additional-info">
                         Вихідні: понеділок, вівторок
-                        <br>
+                        <br />
                         Каса припиняє роботу за 1 годину до закриття музею
                       </div>
                     </div>
@@ -330,7 +363,7 @@
                   src="/src/images//icons/arrow-up.svg"
                   alt="arrow"
                   class="footer__arrow-up"
-               >
+                />
               </a>
             </div>
           </div>
@@ -375,12 +408,18 @@
             Designed by Zhyriada Marina
           </div>
           <div class="footer__bottom-designed">
-            Copyright © 2019. All Rights Reserved.
+            Copyright © <span id="current-year"></span>. All Rights Reserved.
           </div>
         </div>
       </div>
     </footer>
     <!-- #endregion footer -->
+    <script>
+      const yearSpan = document.getElementById("current-year");
+      if (yearSpan) {
+        yearSpan.textContent = new Date().getFullYear();
+      }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
