--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!-- #region head -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,13 +8,127 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <!-- #endregion -->
+    <!-- #region header -->
+    <header class="header" id="header">
+      <a href="#aside" class="header__menu">
+        <img
+          class="header__menu-img"
+          src="./images/header/menu-icon-s.svg"
+          alt="Menu icon"
+        >
+      </a>
+
+      <a href="#" class="header__logo">
+        <img
+          src="./images/header/logo.png"
+          alt="logo"
+          class="header__logo-img">
+      </a>
+
+      <img
+        class="header__image"
+        src="./images/header/header-bg.png"
+        alt="Museum logo"
+      >
+
+      <div class="container">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <div class="header__tickets">
+          <a href="#" class="header__tickets-text">КВИТКИ</a>
+          <button class="header__button">
+            <img
+              class="header__arrow"
+              src="./images/header/arrow-white.png"
+              alt="arrow"
+            >
+          </button>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion -->
+    <!-- #region aside -->
+    <aside class="aside" id="aside">
+      <div class="container">
+        <nav class="nav">
+          <a href="#header" class="nav__close">
+            <img
+              class="nav__icon-close"
+              src="./images/icon-close.svg"
+              alt="icon close"
+            >
+          </a>
+
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Виставки та <br> події</a>
+            </li>
+          </ul>
+
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <hr class="aside__line">
+
+        <div class="aside__text">
+          <p class="aside__schedule">Графік роботи</p>
+
+          <ul class="aside__list">
+            <li class="aside__time">
+              <span class="aside__bold">12:00 — 20:00 </span>середа
+            </li>
+            <li class="aside__time">
+              <span class="aside__bold">12:00 — 20:00 </span>четвер
+            </li>
+            <li class="aside__time">
+              <span class="aside__bold">12:00 — 20:00  </span>п’ятниця
+            </li>
+            <li class="aside__time">
+              <span class="aside__bold">11:00 — 19:00  </span>субота
+            </li>
+            <li class="aside__time">
+              <span class="aside__bold">11:00 — 19:00  </span>неділя
+            </li>
+          </ul>
+
+          <p class="aside__information">
+            <span class="aside__bold">Вихідні:</span> понеділок, вівторок <br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
+    <!-- #region main -->
+    <main class="main">
+      
+    </main>
+    <!-- #endregion -->
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
