--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!-- #region head -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,14 +7,180 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    >
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
+<!-- #endregion -->
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header_top">
+        <img
+          class="header_top-img"
+          src="images/header/background_phone.png"
+          alt="background"
+        >
+      </div>
+
+      <div class="header_div">
+        <a href="#">
+          <img
+            class="header_div-logo"
+            src="images/header/logo.png"
+            alt="logo"
+          >
+        </a>
+      </div>
+
+      <div class="header-button">
+        <a href="#menu">
+          <img
+            class="header-button-image"
+            src="images/header/menu_sign.png"
+            alt="menu"
+          >
+        </a>
+      </div>
+
+      <div class="header_bottom">
+        <h1 class="header_bottom-text">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <div class="header_bottom-button">
+          <div class="header_bottom-button-text">КВИТКИ</div>
+          <a href="#">
+            <div class="header_bottom-button-arrow">
+              <img
+                class="header_bottom-button-arrow--icon"
+                src="images/header/arrow_to-buy.png"
+                alt="arrow"
+              >
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="header_vertical">
+        <div class="header_vertical-line"></div>
+        <div class="header_vertical-text">події</div>
+      </div>
+    </header>
+
+    <aside class="menu" id="menu">
+      <div class="menu_contain">
+        <div class="menu_close">
+          <a href="#">
+            <img
+              class="menu_close-sign"
+              src="./images/menu/close_sign.png"
+              alt="close"
+            >
+          </a>
+        </div>
+        <div class="menu_nav">
+          <ul class="menu_nav-button">
+            <div class="menu_nav-button-block">
+              <a href="#"><li class="menu_nav-button-text">Галерея</li></a>
+              <a href="#"><li class="menu_nav-button-text">Про нас</li></a>
+            </div>
+            <div class="menu_nav-button-block">
+              <a href="#"><li class="menu_nav-button-text">Виставки та події</li></a>
+              <a href="#"><li class="menu_nav-button-text">Виставки та події</li></a>
+            </div>
+          </ul>
+        </div>
+      </div>
+
+      <div class="menu_line"> </div>
+
+      <div class="menu_text">
+        <div class="menu_text_div">
+          <p class="menu_text_title">Графік роботи</p>
+          <p class="menu_text_main-text">12:00 — 20:00 середа <br>12:00 — 20:00 четвер <br>12:00 — 20:00 п’ятниця <br>11:00 — 19:00 субота <br>11:00 — 19:00 неділя</p>
+        </div>
+        <p class="menu_text_description">Вихідні: понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</p>
+      </div>
+    </aside>
+
+
+
+    <main>
+      <section class="events">
+        <h1 class="events_title">Актуальні події</h1>
+        <div class="events_block1">
+          <img
+            class="events_block_image"
+            src="./images/events/first.png"
+            alt="event"
+          >
+          <div class="events_block-for-grid">
+            <div class="events_block_date">
+              <p class="events_block_date-text">ВИСТАВКА</p>
+              <p class="events_block_date-time">26.08-29.11.2019</p>
+            </div>
+            <div class="events_block_title">
+              <p class="events_block_title-text">Йду і повертаюсь</p>
+              <div class="events_block_title-box"></div>
+            </div>
+            <p class="events_block_text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+
+          </div>
+
+        </div>
+
+        <div class="events_block2">
+          <img
+            class="events_block_image"
+            src="./images/events/second.png"
+            alt="event"
+          >
+          <div class="events_block-for-grid">
+            <div class="events_block_date">
+              <p class="events_block_date-text">ВИСТАВКА</p>
+              <p class="events_block_date-time">26.08-29.11.2019</p>
+            </div>
+            <div class="events_block_title">
+              <p class="events_block_title-text">І спогади і мрії</p>
+              <div class="events_block_title-box"></div>
+            </div>
+            <p class="events_block_text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+
+        </div>
+
+      </section>
+
+
+      <section class="lection">
+        <img
+          class="lection_back"
+          src="./images/lection/back.png"
+          alt="back"
+        >
+        <div class="lection_date">
+          <div class="lection_date-top">
+            <p class="lection_date-top-text">ЛЕКЦІЯ</p>
+            <p class="lection_date-top-time">26/08/2019 - 11:00</p>
+          </div>
+          <p class="lection_date-bottom">Від класицизму до романтизму</p>
+        </div>
+      </section>
+      <section></section>
+      <section></section>
+    </main>
+
+    <footer>
+
+    </footer>
+
+
+
+
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
