add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -29,17 +29,12 @@
   <body>
     <header class="header">
       <div class="header__content">
-        <a
-          href="#dropdown__menu"
-          class="header__menu-icon"
-          id="menu-toggle"
-          aria-label="Open menu"
-        >
-          <img
-            src="./images/icons/burger-menu-icon.svg"
-            alt="menu icon"
-          />
+        <a href="#dropdown-menu"
+        class="header__menu-icon" id="menu-toggle"
+        aria-label="Open menu">
+          <img src="./images/icons/burger-menu-icon.svg" alt="menu icon" />
         </a>
+
         <div class="header__img">
           <a href="#" class="header__logo">NA<br>MU</a>
         </div>
@@ -53,7 +48,7 @@
             <br />
             МУЗЕЙ
           </h1>
-          <div class="intro__cta-button">
+          <div class="intro__cta-button-wrapper">
             <a
               href="#tickets"
               class="intro__cta-button"
@@ -73,21 +68,15 @@
         </div>
       </div>
 
+      <a href="#" class="header__overlay"></a>
       <!-- Dropdown Menu -->
-      <aside
-        class="header__menu"
-        id="dropdown__menu"
-        aria-hidden="true"
-      >
+      <aside class="header__menu"
+      id="dropdown-menu" aria-hidden="true">
+
         <div class="header__menu-wrapper">
-          <a href="#"
-          class="header__menu-icon-close"
-            aria-label="Close menu"
-          >
-            <img
-              src="./images/icons/icon-close.svg"
-              alt="Close menu icon"
-            />
+          <a href="#" class="header__menu-icon-close"
+          aria-label="Close menu">
+            <img src="./images/icons/icon-close.svg" alt="Close menu icon" />
           </a>
 
           <nav class="header__menu-nav">
@@ -165,6 +154,7 @@
           </div>
         </div>
       </aside>
+
     </header>
 
     <main>
@@ -323,14 +313,16 @@
         <div class="footer__brand">
           <a href="#" class="footer__brand__logo">NA<br>MU</a>
           <div class="footer__brand__socials">
-            <a href="https://www.facebook.com/yourprofile"
-            target="_blank"
-            rel="noopener noreferrer" aria-label="Facebook">
-              <img src="images/icons/facebook-icon.png" alt="Facebook">
+            <a href="https://www.facebook.com/examplepage"
+                target="_blank"
+                rel="noopener noreferrer" aria-label="Facebook">
+              <img src="images/icons/facebook-icon.png"
+                   alt="Facebook">
             </a>
-            <a href="https://www.instagram.com/yourprofile"
-            target="_blank"
-            rel="noopener noreferrer" aria-label="Instagram">
+
+            <a href="https://www.instagram.com/exampleprofile"
+               target="_blank"
+               rel="noopener noreferrer" aria-label="Instagram">
               <img src="images/icons/instagram-icon.png"
               alt="Instagram">
             </a>
