--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,56 @@
     <!-- #endregion -->
     <!-- #region main -->
     <main class="main">
-      
+      <section class="relevance">
+        <div class="container">
+          <h2 class="section__title">Актуальні події</h2>
+
+          <img
+            class="relevance__image"
+            src="./images/relevance/image-1.png"
+            alt="go and come back"
+          >
+          <div class="relevance__info">
+            <div class="relevance__time">
+              <p class="relevance__event">ВИСТАВКА</p>
+              <p class="relevance__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="relevace__header">Йду і повертаюсь</h3>
+            <p class="relevace__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+
+          <img
+            class="relevance__image"
+            src="./images/relevance/image-2.png"
+            alt="and memories and dreams"
+          >
+          <div class="relevance__info">
+            <div class="relevance__time">
+              <p class="relevance__event">ВИСТАВКА</p>
+              <p class="relevance__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="relevace__header">І спогади і мрії</h3>
+            <p class="relevace__text">
+              Національний художній музей України до 100 річчя від дня народження
+              видатної української художниці  Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+
+          <img
+            class="relevance__image"
+            src="./images/relevance/image-3.png"
+            alt="from romanticism to classicism"
+          >
+          <div class="relevance__info">
+            <div class="relevance__time">
+              <p class="relevance__event">ЛЕКЦІЯ</p>
+              <p class="relevance__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="relevace__header">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- #endregion -->
 
