add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-<!-- #region head -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -16,8 +15,10 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link rel="icon" href="./images/footer/logo.svg"
+     type="image/svg+xml">
   </head>
-<!-- #endregion -->
+
   <body>
     <header class="header">
       <div class="header_top">
@@ -56,7 +57,7 @@
             <div class="header_bottom-button-arrow">
               <img
                 class="header_bottom-button-arrow--icon"
-                src="images/header/arrow_to-buy.png"
+                src="images/header/arrow_to-buy.svg"
                 alt="arrow"
               >
             </div>
@@ -100,13 +101,11 @@
       <div class="menu_text">
         <div class="menu_text_div">
           <p class="menu_text_title">Графік роботи</p>
-          <p class="menu_text_main-text">12:00 — 20:00 середа <br>12:00 — 20:00 четвер <br>12:00 — 20:00 п’ятниця <br>11:00 — 19:00 субота <br>11:00 — 19:00 неділя</p>
+          <p class="menu_text_main-text"><strong>12:00 — 20:00</strong> середа <br><strong>12:00 — 20:00</strong> четвер <br><strong>12:00 — 20:00</strong> п’ятниця <br><strong>11:00 — 19:00</strong> субота <br><strong>11:00 — 19:00</strong> неділя </p>
         </div>
-        <p class="menu_text_description">Вихідні: понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</p>
+        <p class="menu_text_description"><strong>Вихідні</strong> понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</p>
       </div>
     </aside>
-
-
 
     <main>
       <section class="events">
@@ -153,8 +152,6 @@
         </div>
 
       </section>
-
-
       <section class="lection">
         <img
           class="lection_back"
@@ -169,11 +166,123 @@
           <p class="lection_date-bottom">Від класицизму до романтизму</p>
         </div>
       </section>
-      <section></section>
-      <section></section>
+      <section class="gallery">
+        <div class="gallery_title">
+          <p class="gallery_title-text">Галерея</p>
+        </div>
+        <div class="gallery_picture">
+          <img
+            class="gallery_picture_img gallery_picture_img-phone"
+            src="./images/gallery/phone_tablet/first.svg" alt="gallery">
+          <img
+            class="gallery_picture_img gallery_picture_img-tablet"
+            src="./images/gallery/phone_tablet/second.svg" alt="gallery">
+          <img
+            class="gallery_picture_img gallery_picture_img-desktop gallery_picture_img-desktop-first"
+            src="./images/gallery/desktop/first.svg" alt="gallery">
+          <img
+            class="gallery_picture_img gallery_picture_img-desktop gallery_picture_img-desktop-second"
+            src="./images/gallery/desktop/second.svg" alt="gallery">
+          <img
+            class="gallery_picture_img gallery_picture_img-desktop gallery_picture_img-desktop-third"
+            src="./images/gallery/desktop/third.svg" alt="gallery">
+          <img
+            class="gallery_picture_img gallery_picture_img-desktop gallery_picture_img-desktop-fourth"
+            src="./images/gallery/desktop/fourth.svg" alt="gallery">
+
+        </div>
+        <div class="gallery_change">
+          <div class="gallery_change-ball gallery_change-ball-on"></div>
+          <div class="gallery_change-ball"></div>
+          <div class="gallery_change-ball"></div>
+          <div class="gallery_change-ball"></div>
+        </div>
+      </section>
+      <section class="follow">
+        <div class="follow_text">
+          <p class="follow_text-top">Підписка</p>
+          <p class="follow_text-bottom">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        </div>
+        <form
+          action="#"
+          method="post"
+          class="follow_form"
+        >
+          <input
+
+            type="email"
+            id="email"
+            name="email"
+            placeholder="E-mail"
+            required
+          >
+          <button type="submit" class="follow_form-button">
+            <img  class="follow_form-button-img" src="./images/follow/button.svg"
+            alt="button">
+          </button>
+        </form>
+      </section>
     </main>
 
-    <footer>
+
+    <footer class="footer">
+      <div class="footer_div">
+        <div class="footer_icons">
+          <img
+            class="footer_icons-logo"
+            src="./images/footer/logo.svg"
+            alt="logo"
+          >
+          <div class="footer_icons-media">
+            <img
+            class="footer_icons-media-facebook"
+            src="./images/footer/facebook.svg"
+            alt="logo"
+          >
+            <img
+              class="footer_icons-media-instagram"
+              src="./images/footer/instagram.svg"
+              alt="logo"
+            >
+          </div>
+        </div>
+
+        <div class="footer_main">
+          <div class="footer_main_shedule">
+            <p class="footer_main_shedule-title">Графік роботи</p>
+            <p class="footer_main_shedule-main"><br><strong>12:00 — 20:00</strong> середа <br><strong>12:00 — 20:00</strong> четвер <br><strong>12:00 — 20:00</strong> п’ятниця <br><strong>11:00 — 19:00</strong> субота <br><strong>11:00 — 19:00</strong> неділя <br><br><strong>Вихідні</strong> понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</p>
+          </div>
+          <div class="footer_main_contact">
+            <p class="footer_main_contact-title">Контакти:</p>
+            <p class="footer_main_contact-main"><br>вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua</p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="footer_arrow">
+        <img
+          src="./images/footer/Arrow_up.svg"
+          alt="arrow"
+          class="footer_arrow-img"
+        >
+      </div>
+      <div class="footer_line"></div>
+
+      <div class="footer_nav">
+        <ul class="footer_nav-button">
+          <div class="footer_nav-button-block">
+            <a href="#"><li class="footer_nav-button-text">Галерея</li></a>
+            <a href="#"><li class="footer_nav-button-text">Про нас</li></a>
+          </div>
+          <div class="menu_nav-button-block">
+            <a href="#"><li class="footer_nav-button-text">Виставки та події</li></a>
+            <a href="#"><li class="footer_nav-button-text">Контакти</li></a>
+          </div>
+        </ul>
+      </div>
+      </div>
+
 
     </footer>
 
