add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -85,12 +85,12 @@
         <div class="menu_nav">
           <ul class="menu_nav-button">
             <div class="menu_nav-button-block">
-              <a href="#"><li class="menu_nav-button-text">Галерея</li></a>
-              <a href="#"><li class="menu_nav-button-text">Про нас</li></a>
+              <a href="#gallery"><li class="menu_nav-button-text">Галерея</li></a>
+              <a href="#about_us"><li class="menu_nav-button-text">Про нас</li></a>
             </div>
             <div class="menu_nav-button-block">
-              <a href="#"><li class="menu_nav-button-text">Виставки та події</li></a>
-              <a href="#"><li class="menu_nav-button-text">Виставки та події</li></a>
+              <a href="#exhibition"><li class="menu_nav-button-text">Виставки та події</li></a>
+              <a href="#contacts"><li class="menu_nav-button-text">Контакти</li></a>
             </div>
           </ul>
         </div>
@@ -108,7 +108,7 @@
     </aside>
 
     <main>
-      <section class="events">
+      <section class="events" id="exhibition">
         <h1 class="events_title">Актуальні події</h1>
         <div class="events_block1">
           <img
@@ -152,7 +152,7 @@
         </div>
 
       </section>
-      <section class="lection">
+      <section class="lection" id="about_us">
         <img
           class="lection_back"
           src="./images/lection/back.png"
@@ -166,7 +166,7 @@
           <p class="lection_date-bottom">Від класицизму до романтизму</p>
         </div>
       </section>
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="gallery_title">
           <p class="gallery_title-text">Галерея</p>
         </div>
@@ -199,7 +199,7 @@
         </div>
       </section>
       <section class="follow">
-        <div class="follow_text">
+        <div class="follow_text" id="contacts">
           <p class="follow_text-top">Підписка</p>
           <p class="follow_text-bottom">Бути в курсі всіх актуальних подій та останніх новин.</p>
         </div>
@@ -207,6 +207,7 @@
           action="#"
           method="post"
           class="follow_form"
+          onsubmit="this.reset(); return false;"
         >
           <input
 
@@ -254,30 +255,32 @@
           </div>
           <div class="footer_main_contact">
             <p class="footer_main_contact-title">Контакти:</p>
-            <p class="footer_main_contact-main"><br>вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua</p>
+            <p class="footer_main_contact-main"><br><a href="https://maps.app.goo.gl/aLcDfQkjdkBdphaN8">вул. М. Грушевського, 6; Київ, 01001</a> <a href="tel:+340507694929">тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54</a> <a href="https://www.gmail.com/">e-mail: info@namu.kiev.ua</a></p>
           </div>
 
         </div>
       </div>
 
       <div class="footer_arrow">
-        <img
-          src="./images/footer/Arrow_up.svg"
-          alt="arrow"
-          class="footer_arrow-img"
-        >
+        <a href="#">
+          <img
+            src="./images/footer/Arrow_up.svg"
+            alt="arrow"
+            class="footer_arrow-img"
+          >
+        </a>
       </div>
       <div class="footer_line"></div>
 
       <div class="footer_nav">
         <ul class="footer_nav-button">
           <div class="footer_nav-button-block">
-            <a href="#"><li class="footer_nav-button-text">Галерея</li></a>
-            <a href="#"><li class="footer_nav-button-text">Про нас</li></a>
+            <a href="#gallery"><li class="footer_nav-button-text">Галерея</li></a>
+            <a href="#about_us"><li class="footer_nav-button-text">Про нас</li></a>
           </div>
           <div class="menu_nav-button-block">
-            <a href="#"><li class="footer_nav-button-text">Виставки та події</li></a>
-            <a href="#"><li class="footer_nav-button-text">Контакти</li></a>
+            <a href="#exhibition"><li class="footer_nav-button-text">Виставки та події</li></a>
+            <a href="#contacts"><li class="footer_nav-button-text">Контакти</li></a>
           </div>
         </ul>
       </div>
