add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -235,16 +235,20 @@
             alt="logo"
           >
           <div class="footer_icons-media">
-            <img
-            class="footer_icons-media-facebook"
-            src="./images/footer/facebook.svg"
-            alt="logo"
-          >
-            <img
-              class="footer_icons-media-instagram"
-              src="./images/footer/instagram.svg"
-              alt="logo"
-            >
+            <a href="https://www.facebook.com/reg/?locale=uk_UA">
+              <img
+                class="footer_icons-media-facebook"
+                src="./images/footer/facebook.svg"
+                alt="logo"
+              >
+            </a>
+            <a href="https://www.instagram.com/">
+              <img
+                class="footer_icons-media-instagram"
+                src="./images/footer/instagram.svg"
+                alt="logo"
+              >
+            </a>
           </div>
         </div>
 
