add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -235,14 +235,14 @@
             alt="logo"
           >
           <div class="footer_icons-media">
-            <a href="https://www.facebook.com/reg/?locale=uk_UA">
+            <a href="https://www.facebook.com/reg/?locale=uk_UA" target="_blank">
               <img
                 class="footer_icons-media-facebook"
                 src="./images/footer/facebook.svg"
                 alt="logo"
               >
             </a>
-            <a href="https://www.instagram.com/">
+            <a href="https://www.instagram.com/" target="_blank">
               <img
                 class="footer_icons-media-instagram"
                 src="./images/footer/instagram.svg"
@@ -259,7 +259,14 @@
           </div>
           <div class="footer_main_contact">
             <p class="footer_main_contact-title">Контакти:</p>
-            <p class="footer_main_contact-main"><br><a href="https://maps.app.goo.gl/aLcDfQkjdkBdphaN8">вул. М. Грушевського, 6; Київ, 01001</a> <a href="tel:+340507694929">тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54</a> <a href="https://www.gmail.com/">e-mail: info@namu.kiev.ua</a></p>
+            <p class="footer_main_contact-main">
+              <br><a class="footer_main_contact-main-href" target="_blank"
+              href="https://maps.app.goo.gl/aLcDfQkjdkBdphaN8">вул. М. Грушевського, 6; Київ, 01001</a>
+              <a class="footer_main_contact-main-href" target="_blank"
+              href="tel:+340507694929">тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54</a>
+              <a class="footer_main_contact-main-href" target="_blank"
+              href="https://www.gmail.com/">e-mail: info@namu.kiev.ua</a>
+            </p>
           </div>
 
         </div>
