edit gallery hover on image + subscription button action

--- a/src/index.html
+++ b/src/index.html
@@ -307,7 +307,7 @@
             <p class="subscription__text">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
-            <div class="subscription__sender">
+            <form class="subscription__sender">
               <div class="subscription__sender-content">
                 <input
                   type="email"
@@ -318,11 +318,11 @@
                   required
                 />
                 <button
-                  type="submit"
+                  type="reset"
                   class="subscription__sender-button"
                 ></button>
               </div>
-            </div>
+            </form>
           </section>
         </div>
       </div>
