fix href, preventDefault errors

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 
     <link
       rel="icon"
-      type="image"
       href="./images/logo.svg"
-    />
+      type="image/svg+xml"
+    >
 
     <link
       rel="preconnect"
@@ -218,7 +218,6 @@
               <h3 class="exhibition__name heading-3">Йду і повертаюсь</h3>
               <div
                 class="exhibition__name-square"
-                href="#"
               ></div>
             </div>
             <p class="exhibition__description main-text">
@@ -244,7 +243,6 @@
               <h3 class="exhibition__name heading-3">І спогади і мрії</h3>
               <div
                 class="exhibition__name-square"
-                href="#"
               ></div>
             </div>
             <p class="exhibition__description main-text">
