--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
                   <li class="nav__item">
                     <a
                       class="nav__link nav-text nav-text--menu"
-                      href="#sing-up"
+                      href="#sign-up"
                     >
                       Про Нас
                     </a>
@@ -329,33 +329,33 @@
     </section>
 
     <section
-      id="sing-up"
-      class="sing-up"
+      id="sign-up"
+      class="sign-up"
     >
-      <div class="sing-up__wrapper">
+      <div class="sign-up__wrapper">
         <div class="page__container">
-          <div class="sing-up__content">
-            <h2 class="sing-up__heading heading-2">Підписка</h2>
+          <div class="sign-up__content">
+            <h2 class="sign-up__heading heading-2">Підписка</h2>
 
-            <p class="sing-up__description sign-up-text">
+            <p class="sign-up__description sign-up-text">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
 
             <form
-              class="sing-up__form form"
+              class="sign-up__form form"
               onsubmit="this.reset(); return false;"
             >
               <input
                 type="email"
-                class="sing-up__form-input form__input form-text"
+                class="sign-up__form-input form__input form-text"
                 name="email"
                 placeholder="E-mail"
                 size="1"
                 required
               />
               <button
-                class="sing-up__form-button form__button"
-                href="/"
+                class="sign-up__form-button form__button"
+                onclick="location.href='/'"
               >
                 <div class="form__icon-wrapper icon__arrov-wrapper">
                   <div class="form__icon icon icon--arrow-black"></div>
@@ -549,7 +549,7 @@
               <li class="nav__item">
                 <a
                   class="nav__link nav__link--footer nav-text"
-                  href="#sing-up"
+                  href="#sign-up"
                 >
                   Про Нас
                 </a>
