created the info element from transition section for mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -181,16 +181,16 @@
 
       <section class="transition">
         <img
-          class="relevance__image"
-          src="./images/relevance/image-3.png"
+          class="transition__image"
+          src="./images/relevance/transition.png"
           alt="from romanticism to classicism"
         >
-        <div class="relevance__info">
-          <div class="relevance__time">
-            <p class="relevance__event">ЛЕКЦІЯ</p>
-            <p class="relevance__date">26/08/2019 - 11:00</p>
+        <div class="transition__info">
+          <div class="transition__time">
+            <p class="transition__event">ЛЕКЦІЯ</p>
+            <p class="transition__date">26/08/2019 - 11:00</p>
           </div>
-          <h3 class="relevance__header">Від класицизму до романтизму</h3>
+          <h3 class="transition__header">Від класицизму до романтизму</h3>
         </div>
       </section>
     </main>
