created the info element from transition section for mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
       <section class="transition">
         <img
           class="transition__image"
-          src="./images/relevance/transition.png"
+          src="./images/transition.png"
           alt="from romanticism to classicism"
         >
         <div class="transition__info">
