made the transition section

--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,9 @@
     <!-- #endregion -->
     <!-- #region main -->
     <main class="main">
+
+     
+
       <section class="relevance">
         <div class="container">
           <h2 class="section__title">Актуальні події</h2>
@@ -195,7 +198,11 @@
       </section>
     </main>
     <!-- #endregion -->
+    <!-- <hr> -->
+    <!-- #region footer -->
+    <!-- <footer class="footer">as</footer> -->
 
     <script src="scripts/main.js"></script>
   </body>
 </html>
+<!-- #endregion -->
