--- a/src/index.html
+++ b/src/index.html
@@ -125,9 +125,6 @@
     <!-- #endregion -->
     <!-- #region main -->
     <main class="main">
-
-     
-
       <section class="relevance">
         <div class="container">
           <h2 class="section__title">Актуальні події</h2>
@@ -183,24 +180,42 @@
       </section>
 
       <section class="transition">
-        <img
-          class="transition__image"
-          src="./images/transition.png"
-          alt="from romanticism to classicism"
-        >
-        <div class="transition__info">
-          <div class="transition__time">
-            <p class="transition__event">ЛЕКЦІЯ</p>
-            <p class="transition__date">26/08/2019 - 11:00</p>
+        <div class="transition__wrapper">
+          <img
+            class="transition__image"
+            src="./images/transition.png"
+            alt="from romanticism to classicism"
+          >
+          <div class="transition__info">
+            <div class="transition__time">
+              <p class="transition__event">ЛЕКЦІЯ</p>
+              <p class="transition__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="transition__header">Від класицизму до романтизму</h3>
           </div>
-          <h3 class="transition__header">Від класицизму до романтизму</h3>
         </div>
+      </section>
+
+      <section class="gallery">
+        <h2 class="section__title">Галерея</h2>
+        <div class="gallery__images">
+          <img
+            src="./images/gallery/women.png"
+            alt="women"
+            class="gallery__image">
+        </div>
+        <img
+          src="./images/gallery/scroll.svg"
+          alt="scroll"
+          class="gallery__scroll">
       </section>
     </main>
     <!-- #endregion -->
-    <!-- <hr> -->
+
+
+    
     <!-- #region footer -->
-    <!-- <footer class="footer">as</footer> -->
+    <footer class="footer">as</footer>
 
     <script src="scripts/main.js"></script>
   </body>
