add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -100,12 +100,11 @@
             </ul>
             <ul class="header__menu-nav-item">
               <li>
-                <a
-                  href="#about-us"
-                  class="header__menu-link"
-                >
+                <a href="mailto:info@namu.kiev.ua?subject=Subscribe%20to%20Digest"
+                   class="header__menu-link">
                   Про Нас
                 </a>
+              </li>
               </li>
               <li>
                 <a
@@ -313,18 +312,18 @@
         <div class="footer__brand">
           <a href="#" class="footer__brand__logo">NA<br>MU</a>
           <div class="footer__brand__socials">
-            <a href="https://www.facebook.com/examplepage"
-                target="_blank"
-                rel="noopener noreferrer" aria-label="Facebook">
-              <img src="images/icons/facebook-icon.png"
-                   alt="Facebook">
+            <a href="https://www.facebook.com/namu.museum"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Facebook">
+              <img src="images/icons/facebook-icon.png" alt="Facebook">
             </a>
 
-            <a href="https://www.instagram.com/exampleprofile"
-               target="_blank"
-               rel="noopener noreferrer" aria-label="Instagram">
-              <img src="images/icons/instagram-icon.png"
-              alt="Instagram">
+            <a href="https://www.instagram.com/namu.museum"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Instagram">
+              <img src="images/icons/instagram-icon.png" alt="Instagram">
             </a>
           </div>
         </div>
@@ -347,7 +346,7 @@
                     до закриття музею
               </p>
             </div>
-            <div class="footer__block footer__contacts">
+            <div class="footer__block footer__contacts" id="contacts">
               <p class="footer__block-title">Контакти:</p>
               <div class="footer__address">
                 <a href="https://maps.google.com/?q=вул. М. Грушевського, 6, Київ, 01001"
@@ -368,7 +367,9 @@
               <a href="#events">Виставки та події</a>
             </div>
             <div class="footer__links">
-              <a href="#about-us">Про Нас</a>
+              <a href="mailto:info@namu.kiev.ua?subject=Subscribe%20to%20Digest" class="header__menu-link">
+                Про Нас
+              </a>
               <a href="#contacts">Контакти</a>
             </div>
 
